[gd_scene load_steps=16 format=3 uid="uid://dst1n4hu58cpq"]

[ext_resource type="Script" path="res://wizard.gd" id="1_38rvp"]
[ext_resource type="Texture2D" uid="uid://dkdqdl0bqb1hk" path="res://Enchanted Forest - Individual Frames/Enchanted Forest - Individual Frames/Wizard/Wizard_Idle + Walk_1.png" id="1_jt12l"]
[ext_resource type="Texture2D" uid="uid://6iuug7yuspoi" path="res://Enchanted Forest - Individual Frames/Enchanted Forest - Individual Frames/Wizard/Wizard_Idle + Walk_2.png" id="2_jnprd"]
[ext_resource type="Texture2D" uid="uid://vgipkk8n6ox5" path="res://Enchanted Forest - Individual Frames/Enchanted Forest - Individual Frames/Wizard/Wizard_Idle + Walk_3.png" id="3_8eyvj"]
[ext_resource type="Texture2D" uid="uid://budhq4od2fhra" path="res://Enchanted Forest - Individual Frames/Enchanted Forest - Individual Frames/Wizard/Wizard_Idle + Walk_4.png" id="4_c1hlu"]
[ext_resource type="PackedScene" uid="uid://bhji8kcm3c0ui" path="res://wand.tscn" id="6_pt62o"]

[sub_resource type="SpriteFrames" id="SpriteFrames_l00eq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_jt12l")
}, {
"duration": 1.0,
"texture": ExtResource("2_jnprd")
}, {
"duration": 1.0,
"texture": ExtResource("3_8eyvj")
}, {
"duration": 1.0,
"texture": ExtResource("4_c1hlu")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_qq1xm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_excvw"]
resource_name = "idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_agc45"]
resource_name = "jump"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"jump"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_fm6vp"]
resource_name = "walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"walk"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1m8rj"]
_data = {
"RESET": SubResource("Animation_qq1xm"),
"idle": SubResource("Animation_excvw"),
"jump": SubResource("Animation_agc45"),
"walk": SubResource("Animation_fm6vp")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sgdhl"]
size = Vector2(33.6, 47.075)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vogww"]
size = Vector2(81, 54)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5hhb7"]
size = Vector2(7, 7)

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_38rvp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -30)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_l00eq")
animation = &"idle"
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_1m8rj")
}

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(68, -29)
scale = Vector2(10, 10)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-6.6, -17.3625)
shape = SubResource("RectangleShape2D_sgdhl")

[node name="Node2D" parent="." instance=ExtResource("6_pt62o")]
position = Vector2(52, 7)

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(16.5, 5)
shape = SubResource("RectangleShape2D_vogww")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(5.5, -5.5)
shape = SubResource("RectangleShape2D_5hhb7")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_2_body_entered"]
